--- a/index.html
+++ b/index.html
@@ -9,10 +9,11 @@
 </head>
 <body>
     <main>
-        <img src="imagens/pexels-rdne-9089256.jpg" alt="Plano de fundo">
-        <h1>Login</h1>
-        <p>Seja bem-vindo! Faça login para poder acessar sua conta:</p>
-        <form method="post">
+        <div id="image"></div>
+        <div id="loginfield">
+            <h1>Login</h1>
+            <p>Seja bem-vindo! Faça login para poder acessar sua conta:</p>
+            <form method="post">
                 <div id="emailfield">
                     <i class="material-symbols-outlined">person</i>
                     <input type="email" name="useremail" id="iuseremail" placeholder="seu e-mail">
@@ -22,11 +23,11 @@
                     <input type="password" name="userpass" id="iuserpass" placeholder="sua senha" min="8">
                 </div>
                 <div id="buttonfield">
-                    <input type="submit" value="Entrar">
-                    <a href="">Esqueci a senha<i class="material-symbols-outlined">mail</i></a> 
+                    <input type="submit" value="Entrar" class="button">
+                    <a href="#" class="button">Esqueci a senha<i class="material-symbols-outlined">mail</i></a> 
                 </div>
-        </form>
-
+            </form>
+        </div>
     </main>
 </body>
 </html>
