media queries completeds

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined" rel="stylesheet" />
     <link rel="stylesheet" href="estilos/default.css">
+    <link rel="stylesheet" href="estilos/media-queries.css">
     <title>Login</title>
 </head>
 <body>
@@ -13,7 +14,7 @@
         <div id="loginfield">
             <h1>Login</h1>
             <p>Seja bem-vindo! Faça login para poder acessar sua conta:</p>
-            <form method="post">
+            <form action="login.php" method="post">
                 <div id="emailfield">
                     <i class="material-symbols-outlined">person</i>
                     <input type="email" name="useremail" id="iuseremail" placeholder="seu e-mail">
