--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
                     <i class="material-symbols-outlined">person</i>
                     <input type="email" name="useremail" id="iuseremail" placeholder="seu e-mail" autocomplete="email">
                 </div>
-                <div class="passfield">
+                <div class="login">
                     <i class="material-symbols-outlined">key</i>
                     <input type="password" name="userpass" id="iuserpass" placeholder="sua senha" min="8" autocomplete="current-password">
                 </div>
